syntax = "proto3";

package NAlice.NWebSearch;

option go_package = "a.yandex-team.ru/alice/protos/websearch";
option java_package = "ru.yandex.alice.protos.websearch";

import "mapreduce/yt/interface/protos/extension.proto";

import "google/protobuf/wrappers.proto";

message TTunnellerRawResponse {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    google.protobuf.StringValue RawResponse = 1 [json_name = "raw_response", (NYT.column_name) = "raw_response"];
}

message TStaticBlenderFactors {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated float Factors = 1 [json_name = "factors", (NYT.column_name) = "factors"];
}

message TReportGrouping {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated string RawGrouping = 1 [json_name = "raw_grouping", (NYT.column_name) = "raw_groupong"];
}

message TDocs {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated string RawDocs = 1 [json_name = "raw_docs", (NYT.column_name) = "raw_docs"];
}
